@@ -35,6 +35,24 @@ db_progress set 100
 sleep 1
 
 db_progress stop
+
+# Test for GO while doing PROGRESS as it can happen with
+# debconf-apt-progress
+
+db_capb progresscancel
+db_progress start 0 3 progress/title
+for i in $(seq 1 3); do
+    db_subst progress/step i $i
+    db_progress info progress/step
+    if [ "$i" = 2 ]; then
+        db_fset test/string seen false
+        db_input high test/string
+        db_go
+    fi
+    sleep 1
+    db_progress step 1
+done
+
 db_stop
 sleep 1
 exit 0
