@@ -10,6 +10,9 @@ cdebconf (0.127) UNRELEASED; urgency=low
     the GTK+ frontend.  (Closes: #398902)
   * Remove useless debug messages in progress handling of the GTK+ frontend.
     (Closes: #455981)
+  * Show progress widgets after handling a GO in the GTK+ frontend.
+    (Closes: #464380)
+  * Add a case for the previous case in the "progress" test suite.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 22 Jan 2008 15:44:34 +0000
 
